Changed vertical align of marquee and fixed footer to bottom

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,7 +33,7 @@
   position: absolute;
   text-align: right;
   width: auto;
-  top: 25vh;
+  top: 30%;
   right: 100px;
   padding: 2px;
   p {
