--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -31,6 +31,7 @@ a {
 .container-home {
   width: 1000px;
   margin: auto;
+  min-height: calc(100vh - 764px);
 }
 
 .container {
